--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>cobertura-maven-plugin</artifactId>
-        <LATEST>/<VERSION>
+        <version>2.7</version>
         <configuration>
           <formats>
             <format>xml</format>
